--- a/kompren-examples/LRBAC.model/pom.xml
+++ b/kompren-examples/LRBAC.model/pom.xml
@@ -14,18 +14,19 @@
 		<xtend.version>2.4.3</xtend.version>
 	</properties>
   
- 	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+   <build>
+   	<sourceDirectory>src/</sourceDirectory>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 	<dependencies>
 		<dependency>
