--- a/kompren-examples/LRBAC2.model/pom.xml
+++ b/kompren-examples/LRBAC2.model/pom.xml
@@ -15,10 +15,11 @@
 	</properties>
   
  	<build>
+ 		<sourceDirectory>src/</sourceDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
