--- a/kompren-editor/fr.inria.diverse.kompren.xtext.ui/build.properties
+++ b/kompren-editor/fr.inria.diverse.kompren.xtext.ui/build.properties
@@ -1,6 +1,8 @@
 source.. = src/,\
-          src-gen/,\
-          xtend-gen/
+           src-gen/,\
+           xtend-gen/,\
+           icons/
 bin.includes = META-INF/,\
                .,\
+               icons/,\
                plugin.xml
