--- a/kompren-editor/fr.inria.diverse.kompren.xtext.ui/plugin.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.xtext.ui/plugin.xml
@@ -6,12 +6,13 @@
     <extension
             point="org.eclipse.ui.editors">
         <editor
-            class="fr.inria.diverse.kompren.ui.KomprenExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
-            contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
-            default="true"
-            extensions="kompren"
-            id="fr.inria.diverse.kompren.Kompren"
-            name="Kompren Editor">
+              class="fr.inria.diverse.kompren.ui.KomprenExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
+              contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
+              default="true"
+              extensions="kompren"
+              icon="icons/full/obj16/komprenTextFile.png"
+              id="fr.inria.diverse.kompren.Kompren"
+              name="Kompren Editor">
         </editor>
     </extension>
     <extension
