--- a/kompren-examples/fr.inria.diverse.kompren.oclSlicer/pom.xml
+++ b/kompren-examples/fr.inria.diverse.kompren.oclSlicer/pom.xml
@@ -82,16 +82,30 @@
 			<artifactId>LRBAC2.model</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.eclipse.ocl</groupId> -->
-<!-- 			<artifactId>ecore</artifactId> -->
-<!-- 			<version>1.1.0-v200706071450</version> -->
-<!-- 		</dependency> -->
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.kermeta.eclipse</groupId> -->
-<!-- 			<artifactId>net.sourceforge.lpg.lpgjavaruntime</artifactId> -->
-<!-- 			<version>1.1.0.v201004271650</version> -->
-<!-- 		</dependency> -->
+  		<dependency>
+			<groupId>org.eclipse.ocl</groupId>
+			<artifactId>ecore</artifactId>
+			<version>3.3.0-v20130520-1222</version>
+  		</dependency>
+  		<dependency>
+			<groupId>org.eclipse</groupId>
+			<artifactId>ocl</artifactId>
+			<version>3.3.0-v20140120-1508</version>
+  		</dependency>
+  		<dependency>
+			<groupId>org.eclipse.ocl</groupId>
+			<artifactId>common</artifactId>
+			<version>1.1.0-v20130531-1508</version>
+  		</dependency>
+  		<dependency>
+			<groupId>org.eclipse.ocl</groupId>
+			<artifactId>common</artifactId>
+			<version>1.1.0-v20130531-1508</version>
+  		</dependency>
+		<dependency>
+		    <groupId>lpg.runtime</groupId>
+		    <artifactId>java</artifactId>
+		    <version>2.0.17-v201004271640</version>
+		</dependency>
 	</dependencies>
 </project>
