--- a/kompren-examples/fr.inria.diverse.kompren.oclSlicer/.classpath
+++ b/kompren-examples/fr.inria.diverse.kompren.oclSlicer/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/xtend-gen"/>
+	<classpathentry kind="src" path="src/main/kompren-gen"/>
 	<classpathentry kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -20,18 +21,12 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/opt/k3/plugins/org.eclipse.ocl.common_1.1.0.v20130531-0544.jar"/>
-	<classpathentry kind="lib" path="/opt/k3/plugins/org.eclipse.ocl.ecore_3.3.0.v20130520-1222.jar"/>
-	<classpathentry kind="lib" path="/opt/k3/plugins/org.eclipse.ocl_3.3.0.v20130909-1552.jar"/>
-	<classpathentry kind="lib" path="/opt/k3/plugins/lpg.runtime.java_2.0.17.v201004271640.jar"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/LRBAC.model"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/LRBAC2.model"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
