--- a/kompren-editor/fr.inria.diverse.kompren.xtext.ui/pom.xml
+++ b/kompren-editor/fr.inria.diverse.kompren.xtext.ui/pom.xml
@@ -10,4 +10,12 @@
         <artifactId>fr.inria.diverse.kompren.editor.root</artifactId>
         <version>3.0.0-SNAPSHOT</version>
     </parent>
+
+    <dependencies>
+		<dependency>
+            <groupId>fr.inria.diverse.kompren</groupId>
+            <artifactId>fr.inria.diverse.kompren.model</artifactId>
+            <version>${kompren.version}</version>
+        </dependency>
+       </dependencies>
 </project>
