--- a/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
@@ -49,10 +49,16 @@
 			<version>[3.8.2,)</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.core</groupId>
-			<artifactId>runtime</artifactId>
-			<version>[3.9.0,)</version>
+			<groupId>org.eclipse.equinox</groupId>
+			<artifactId>app</artifactId>
+			<version>[1.3.100,)</version>
 		</dependency>
+	    <dependency>
+	      <groupId>org.eclipse.equinox</groupId>
+	      <artifactId>common</artifactId>
+	      <version>[3.2.0,4.0.0)</version>
+	      <optional>false</optional>
+	    </dependency>
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
