--- a/kompren-core/fr.inria.diverse.kompren.model/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.model/pom.xml
@@ -2,78 +2,70 @@
 <!-- License    : EPL                                    -->
 <!-- Project    : org.kermeta.language.model -->
 <!-- Copyright  : IRISA / INRIA / Universite de Rennes 1 --> 
-				
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>fr.inria.diverse.kompren.model</artifactId>
-    <packaging>bundle</packaging>
+    <packaging>eclipse-plugin</packaging>
     <name>fr.inria.diverse.kompren.model :: Kompren model</name>
-    
     <parent>
         <groupId>fr.inria.diverse.kompren</groupId>
         <artifactId>fr.inria.diverse.kompren.root</artifactId>
         <version>3.0.0-SNAPSHOT</version>
     </parent>
     
-    <build>
-        <sourceDirectory>src</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>model</directory>
-				<targetPath>model</targetPath>
-			</resource>
-			<resource>
-				<directory>.</directory>
-				<includes>
-					<include>plugin.properties</include>
-					<include>plugin.xml</include>
-				</includes>
-			</resource>
-		</resources>
-        <plugins>
-
-            <!-- Creation of the bundle jar and its manifest -->
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Bundle-SymbolicName>fr.inria.diverse.kompren.model; singleton=true</Bundle-SymbolicName>
-                        <Bundle-Name>${project.name}</Bundle-Name>
-                        <Bundle-Vendor>${bundle.vendor}</Bundle-Vendor>
-<!--                         <Bundle-Version>${bundle.version}</Bundle-Version> -->
-                        <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
-                        <Export-Package>
-                        	kompren.*
-                        </Export-Package>
-                        <Import-Package>
-                        	org.eclipse.emf.*,
-                        	org.osgi.framework;version="[1.5,2)"</Import-Package>
-                        <Bundle-ClassPath>.</Bundle-ClassPath>
-                    </instructions>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <dependencies>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
-			<version>${emf.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.ecore</artifactId>
-			<version>${emf.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.emf</groupId>
-			<artifactId>org.eclipse.emf.common</artifactId>
-			<version>${emf.version}</version>
-		</dependency>
-    </dependencies>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-dependency-plugin
+										</artifactId>
+										<versionRange>
+											[2.4,)
+										</versionRange>
+										<goals>
+											<goal>copy</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+<!--     <dependencies> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.eclipse.emf</groupId> -->
+<!-- 			<artifactId>org.eclipse.emf.ecore.xmi</artifactId> -->
+<!-- 			<version>${emf.version}</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.eclipse.emf</groupId> -->
+<!-- 			<artifactId>org.eclipse.emf.ecore</artifactId> -->
+<!-- 			<version>${emf.version}</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.eclipse.emf</groupId> -->
+<!-- 			<artifactId>org.eclipse.emf.common</artifactId> -->
+<!-- 			<version>${emf.version}</version> -->
+<!-- 		</dependency> -->
+<!--     </dependencies> -->
 </project>
