--- a/kompren-core/fr.inria.diverse.kompren.root/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.root/pom.xml
@@ -11,75 +11,290 @@
 	<packaging>pom</packaging>
 	<version>3.0.0-SNAPSHOT</version>
 	<name>fr.inria.diverse.kompren.root :: Root for the projects dedicated to Kompren</name>
-
+	
 	<properties>
 		<kermeta.version>3.0.0-SNAPSHOT</kermeta.version>
 		<scala.version>2.10.4</scala.version>
 		<kompren.version>3.0.0-SNAPSHOT</kompren.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<emf.version>2.9.1-v20130827-0309</emf.version>
-		<osgi.version>4.2.0</osgi.version>
 		<bundle.vendor>IRISA/Inria</bundle.vendor>
 		<xtend.version>2.5.4</xtend.version>
 		<xtendGenDirectory>target/generated-sources/xtend</xtendGenDirectory>
-    	<eclipse.repository.version>indigo</eclipse.repository.version>
+    	<eclipse-repo.url>http://download.eclipse.org/releases/kepler/</eclipse-repo.url>
+		<xtend-repo.url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</xtend-repo.url>
+		<tycho-repo.url>https://oss.sonatype.org/content/groups/public/</tycho-repo.url>
     	<junit.version>4.11</junit.version>
     	<java.version>1.7</java.version>
    		<tycho.version>0.19.0</tycho.version>
+   		<tycho-extras.version>0.19.0</tycho-extras.version>
+   		<nightly.modifier>.nightly</nightly.modifier> <!-- must be set to ".nightly" for SNAPSHOT and set to "" for release -->
 	</properties>
 
+	<repositories>
+        <repository>
+                <id>platform</id>
+                <layout>p2</layout>
+                <url>https://ci.inria.fr/k3al/job/k3-composite_updatesite/lastSuccessfulBuild/artifact/k3-composite_updatesite/k3.platform.composite.updatesite/update/</url>
+		</repository>
+
+		<!-- repository for pure maven artefacts -->
+		<repository>
+		     <id>mavenInriaSnapshot</id>
+		     <name>http://maven.inria.fr-snapshots</name>
+		     <url>http://maven.inria.fr/artifactory/public-snapshot</url>
+		 </repository>
+		<repository>
+		     <id>mavenInriaRelease</id>
+		     <name>http://maven.inria.fr-releases</name>
+		     <url>http://maven.inria.fr/artifactory/public-release</url>
+		 </repository>
+	</repositories>
+<!-- 	<repositories> -->
+<!-- 		<repository> -->
+<!-- 		     <id>mavenInriaSnapshot</id> -->
+<!-- 		     <name>http://maven.inria.fr-snapshots</name> -->
+<!-- 		     <url>http://maven.inria.fr/artifactory/public-snapshot</url> -->
+<!-- 		 </repository> -->
+<!-- 		<repository> -->
+<!-- 		     <id>mavenInriaRelease</id> -->
+<!-- 		     <name>http://maven.inria.fr-releases</name> -->
+<!-- 		     <url>http://maven.inria.fr/artifactory/public-release</url> -->
+<!-- 		 </repository> -->
+<!-- 		<repository> -->
+<!-- 			<id>kermeta-public-release</id> -->
+<!-- 			<name>Kermeta public release repository on maven.irisa.fr</name> -->
+<!-- 			<url>http://maven.irisa.fr/artifactory/kermeta-public-release</url> -->
+<!-- 		</repository> -->
+<!-- 		<repository> -->
+<!-- 			<id>kermeta-public-snapshot</id> -->
+<!-- 			<name>Kermeta public snapshot repository on maven.irisa.fr</name> -->
+<!-- 			<url>http://maven.irisa.fr/artifactory/kermeta-public-snapshot</url> -->
+<!-- 		</repository> -->
+<!-- 		<repository> -->
+<!-- 			<id>kepler</id> -->
+<!-- 			<url>${eclipse-repo.url}/</url> -->
+<!-- 			<releases> -->
+<!-- 				<enabled>true</enabled> -->
+<!-- 			</releases> -->
+<!-- 			<snapshots> -->
+<!-- 				<enabled>true</enabled> -->
+<!-- 			</snapshots> -->
+<!-- 		</repository> -->
+<!-- 		<repository> -->
+<!-- 			<id>xtend</id> -->
+<!-- 			<url>${xtend-repo.url}</url> -->
+<!-- 			<releases> -->
+<!-- 				<enabled>true</enabled> -->
+<!-- 			</releases> -->
+<!-- 			<snapshots> -->
+<!-- 				<enabled>true</enabled> -->
+<!-- 			</snapshots> -->
+<!-- 		</repository> -->
+<!-- 		<repository> -->
+<!-- 			<id>k3</id> -->
+<!-- 			<url>https://ci.inria.fr/k3al/job/k3.eclipse/lastSuccessfulBuild/artifact/k3.eclipse/fr.inria.diverse.k3.p2updatesite/target/site/</url> -->
+<!-- 			<releases> -->
+<!-- 				<enabled>true</enabled> -->
+<!-- 			</releases> -->
+<!-- 			<snapshots> -->
+<!-- 				<enabled>true</enabled> -->
+<!-- 			</snapshots> -->
+<!-- 		</repository> -->
+<!-- 	</repositories> -->
+	
+		<pluginRepositories>
+		<pluginRepository>
+			<id>kepler</id>
+			<url>${eclipse-repo.url}</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+		<pluginRepository>
+			<id>xtend</id>
+			<url>${xtend-repo.url}</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+
+	</pluginRepositories>
+	
+	
 	<build>
 		<plugins>
-			<!-- Java compiler plugin -->
+			<!-- calculate versions for some special cases -->
+			<!-- calculate the nightly modifier from the project version  -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
+				<groupId>org.codehaus.groovy.maven</groupId>
+				<artifactId>gmaven-plugin</artifactId>
+				<version>1.0</version>
+				<executions>
+					<execution>
+						<id>generate_nightly_modifier</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<!-- setting the property in groovy doesn't work well with tycho, so I've implemented a check instead -->
+							<source>
+								String nightlyModifier = "${nightly.modifier}"
+								if ("${project.version}".contains("SNAPSHOT") ){
+									if( ! nightlyModifier.equals(".nightly") ){
+										fail("property nightly.modifier must be set to '.nightly' for SNAPSHOT versions. "+nightlyModifier)
+									}
+								} else if(! nightlyModifier.isEmpty() ){
+									fail("property nightly.modifier must be empty for RELEASE versions. "+nightlyModifier)
+								}
+							</source>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<extensions>true</extensions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
+					<source>1.5</source>
+					<target>1.5</target>
 				</configuration>
 			</plugin>
-			<!-- Resources plugin : allow to collect and embedd severals resources -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.4.3</version>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
 				<configuration>
-					<encoding>${project.build.sourceEncoding}</encoding>
+					<environments>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
+							<arch>x86</arch>
+						</environment>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86</arch>
+						</environment>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>macosx</os>
+							<ws>cocoa</ws>
+							<arch>x86_64</arch>
+						</environment>
+					</environments>
 				</configuration>
 			</plugin>
-			<!-- Felix BnD plugin : allow Bundle packaging : generate OSGi JAR -->
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.4.0</version>
-				<extensions>true</extensions>
-			</plugin>
+
+			<!-- <plugin> <groupId>org.eclipse.tycho</groupId> <artifactId>tycho-source-plugin</artifactId> 
+				<executions> <execution> <id>plugin-source</id> <goals> <goal>plugin-source</goal> 
+				</goals> </execution> </executions> </plugin> -->
 		</plugins>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>target-platform-configuration</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-compiler-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<configuration>
+						<compilerArguments>
+							<inlineJSR />
+							<enableJavadoc />
+							<encoding>ISO-8859-1</encoding>
+						</compilerArguments>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-packaging-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>org.eclipse.tycho.extras</groupId>
+							<artifactId>tycho-buildtimestamp-jgit</artifactId>
+							<version>${tycho-extras.version}</version>
+						</dependency>
+					</dependencies>
+					<configuration>
+						<strictBinIncludes>false</strictBinIncludes>
+						<format>'v'yyyyMMdd-HHmm</format>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-surefire-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-source-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<configuration>
+						<strictSrcIncludes>false</strictSrcIncludes>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-director-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-repository-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho.extras</groupId>
+					<artifactId>tycho-source-feature-plugin</artifactId>
+					<version>${tycho-extras.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho.extras</groupId>
+					<artifactId>tycho-custom-bundle-plugin</artifactId>
+					<version>${tycho-extras.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<configuration>
+						<baselineMode>warn</baselineMode>
+						<baselineReplace>none</baselineReplace>
+						<baselineRepositories>
+							<repository>
+								<url>http://download.eclipse.org/eclipse/updates/4.3</url>
+							</repository>
+						</baselineRepositories>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
-	<repositories>
-		<!-- configure p2 repository to resolve against -->
-		<repository>
-			<id>${eclipse.repository.version}</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/${eclipse.repository.version}/</url>
-		</repository>
-		<repository>
-			<id>Xtext Update Site</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
-		</repository>
-		<repository>
-			<id>kermeta-public-release</id>
-			<name>Kermeta public release repository on maven.irisa.fr</name>
-			<url>http://maven.irisa.fr/artifactory/kermeta-public-release</url>
-		</repository>
-		<repository>
-			<id>kermeta-public-snapshot</id>
-			<name>Kermeta public snapshot repository on maven.irisa.fr</name>
-			<url>http://maven.irisa.fr/artifactory/kermeta-public-snapshot</url>
-		</repository>
-	</repositories>
 </project>
