--- a/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
+++ b/kompren-core/fr.inria.diverse.kompren.compiler/pom.xml
@@ -4,6 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>fr.inria.diverse.kompren.compiler</artifactId>
 	<name>Kompren compiler</name>
+	<packaging>eclipse-plugin</packaging>
 	
     <parent>
         <groupId>fr.inria.diverse.kompren</groupId>
@@ -12,6 +13,42 @@
     </parent>
     
 	<build>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-dependency-plugin
+										</artifactId>
+										<versionRange>
+											[2.4,)
+										</versionRange>
+										<goals>
+											<goal>copy</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
@@ -43,22 +80,22 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<dependency>
-			<groupId>org.eclipse.jdt</groupId>
-			<artifactId>core</artifactId>
-			<version>[3.8.2,)</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.equinox</groupId>
-			<artifactId>app</artifactId>
-			<version>[1.3.100,)</version>
-		</dependency>
-	    <dependency>
-	      <groupId>org.eclipse.equinox</groupId>
-	      <artifactId>common</artifactId>
-	      <version>[3.2.0,4.0.0)</version>
-	      <optional>false</optional>
-	    </dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.eclipse.jdt</groupId> -->
+<!-- 			<artifactId>core</artifactId> -->
+<!-- 			<version>[3.8.2,)</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.eclipse.equinox</groupId> -->
+<!-- 			<artifactId>app</artifactId> -->
+<!-- 			<version>[1.3.100,)</version> -->
+<!-- 		</dependency> -->
+<!-- 	    <dependency> -->
+<!-- 	      <groupId>org.eclipse.equinox</groupId> -->
+<!-- 	      <artifactId>common</artifactId> -->
+<!-- 	      <version>[3.2.0,4.0.0)</version> -->
+<!-- 	      <optional>false</optional> -->
+<!-- 	    </dependency> -->
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
